feat: use http2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ anthropic = "^0.42.0"
 openai = "^1.59.3"
 cohere = "^5.13.5"
 brotli = "^1.1.0"
+httpx = {version = "^0.28.1", extras = ["http2"]}
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
