Added support for Async calls

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ openai = "^1.61.0"
 cohere = "^5.13.11"
 brotli = "^1.1.0"
 httpx = "^0.28.1"
+boto3 = "^1.37.23"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.4"
